[gd_scene load_steps=9 format=3 uid="uid://ba8aq4kwa10gq"]

[ext_resource type="Script" path="res://Menus/Main Menu/main_menu.gd" id="1_hp6vp"]
[ext_resource type="FontFile" uid="uid://d1gy756akasq0" path="res://Assets/New Roman Times.ttf" id="1_v4x4n"]
[ext_resource type="Texture2D" uid="uid://byvmfporyv5cq" path="res://Assets/fantasy_pixelmap_by_chevyray_d1uljko-375w-2x.jpg" id="2_j61qd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57u4b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6eurx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vevi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s1sh0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8t0c"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hp6vp")

[node name="Background Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j61qd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Game Title" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/Game Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v4x4n")
theme_override_font_sizes/font_size = 88
text = "
W I L D"

[node name="Menu Buttons" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Menu Buttons"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Separator" type="Control" parent="MarginContainer/Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="Separator5" type="Control" parent="MarginContainer/Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="Separator6" type="Control" parent="MarginContainer/Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/Menu Buttons/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v4x4n")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_57u4b")
text = "
PLAY"
icon_alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="Factions" type="Button" parent="MarginContainer/Menu Buttons/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v4x4n")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_6eurx")
text = "
FACTIONS"

[node name="Separator3" type="Control" parent="MarginContainer/Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="MarginContainer/Menu Buttons/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("1_v4x4n")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_7vevi")
text = "
OPTIONS"

[node name="Separator4" type="Control" parent="MarginContainer/Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/Menu Buttons/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v4x4n")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_s1sh0")
text = "
QUIT"

[node name="Credits" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 1

[node name="Credits Button" type="Button" parent="MarginContainer/Credits"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v4x4n")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_g8t0c")
text = "
CREDITS"

[connection signal="pressed" from="MarginContainer/Menu Buttons/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/Menu Buttons/VBoxContainer/Factions" to="." method="_on_decks_pressed"]
[connection signal="pressed" from="MarginContainer/Menu Buttons/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/Menu Buttons/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
